simplify and fix completions for /usage